# oxide_langchain

./: Cargo.toml  README.md
main-test/: Cargo.toml
main-test/src/: chat_ollama.rs  chat_open_ai.rs  main.rs
oxide-langchain/: Cargo.toml
oxide-langchain-core/: Cargo.toml
oxide-langchain-core/src/: lib.rs  main.rs
oxide-langchain-core/src/traits/: arunnable.rs  document.rs  inputs.rs  mod.rs  runnable.rs
oxide-langchain-macros/: Cargo.toml
oxide-langchain-macros/src/: lib.rs  tool.rs
oxide-langchain-utils/: Cargo.toml
oxide-langchain-utils/src/: lib.rs  runnable.rs
oxide-langchain/src/: lib.rs
